Implemented recording and playback during the tutorial phase.

--- a/apps/vst/AndroidManifest.xml
+++ b/apps/vst/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name="WordGameActivity" android:screenOrientation="landscape"></activity>
         <activity android:name="ChooseGameActivity" android:screenOrientation="landscape"></activity>
         <activity android:name="LessonCompleteActivity" android:screenOrientation="landscape"></activity>
+        <activity android:name="TutorialActivity" android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
