- Restructured the tutorial interactions to make them more resilient and easier to modify. - Added settings screen.

--- a/apps/vst/AndroidManifest.xml
+++ b/apps/vst/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name="ChooseGameActivity" android:screenOrientation="landscape"></activity>
         <activity android:name="LessonCompleteActivity" android:screenOrientation="landscape"></activity>
         <activity android:name="TutorialActivity" android:screenOrientation="landscape"></activity>
+        <activity android:name="SettingsActivity"></activity>
     </application>
 
 </manifest>
