--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,39 @@ assets/.DS_Store
 assets/audio/.DS_Store
 
 *.pkf
+
+apps/vst/res/.DS_Store
+
+apps/vst/.DS_Store
+
+apps/vst/.DS_Store
+
+apps/.DS_Store
+
+.DS_Store
+
+.DS_Store
+
+apps/vst/src/.DS_Store
+
+apps/vst/src/edu/.DS_Store
+
+apps/vst/src/edu/voicelabs/.DS_Store
+
+assets/images/.DS_Store
+
+assets/images/.DS_Store
+
+apps/vst/src/edu/.DS_Store
+
+apps/vst/src/edu/voicelabs/.DS_Store
+
+apps/vst/src/.DS_Store
+
+apps/vst/res/.DS_Store
+
+apps/vst/.DS_Store
+
+apps/.DS_Store
+
+.DS_Store
